EXTRA_DIST = manuel.tex

doc : manuel.tex
	./input_macro.sh '#define BUG\(' '../src/lib/common/common_erreurs.h' common_erreurs_BUG_func.tex.tmp || exit 1;
	./input_macro.sh '#define BUGTEXTE\(' '../src/lib/common/common_erreurs.h' common_erreurs_BUGTEXTE_func.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Troncon' '../src/lib/common/common_fonction.h' common_fonction_Troncon_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Fonction' '../src/lib/common/common_fonction.h' common_fonction_Fonction_struct.tex.tmp || exit 1;
	./input.sh 'int common_fonction_init' '../src/lib/common/common_fonction.c' common_fonction_init_func.tex.tmp || exit 1;
	./input_com.sh 'int common_fonction_init' '../src/lib/common/common_fonction.c' common_fonction_init_com.tex.tmp || exit 1;
	./input.sh 'int common_fonction_scinde_troncon' '../src/lib/common/common_fonction.c' common_fonction_scinde_troncon_func.tex.tmp || exit 1;
	./input_com.sh 'int common_fonction_scinde_troncon' '../src/lib/common/common_fonction.c' common_fonction_scinde_troncon_com.tex.tmp || exit 1;
	./input.sh 'int common_fonction_ajout' '../src/lib/common/common_fonction.c' common_fonction_ajout_func.tex.tmp || exit 1;
	./input_com.sh 'int common_fonction_ajout' '../src/lib/common/common_fonction.c' common_fonction_ajout_com.tex.tmp || exit 1;
	./input.sh 'int common_fonction_affiche' '../src/lib/common/common_fonction.c' common_fonction_affiche_func.tex.tmp || exit 1;
	./input_com.sh 'int common_fonction_affiche' '../src/lib/common/common_fonction.c' common_fonction_affiche_com.tex.tmp || exit 1;
	./input.sh 'int common_fonction_free' '../src/lib/common/common_fonction.c' common_fonction_free_func.tex.tmp || exit 1;
	./input_com.sh 'int common_fonction_free' '../src/lib/common/common_fonction.c' common_fonction_free_com.tex.tmp || exit 1;
	./input_macro.sh '#define ERREUR_RELATIVE_PUISSANCE' '../src/lib/common/common_maths.h' common_maths_ERREUR_RELATIVE_EGALE_func.tex.tmp || exit 1;
	./input.sh 'double common_math_arrondi_nombre' '../src/lib/common/common_maths.c' common_math_arrondi_nombre_func.tex.tmp || exit 1;
	./input_com.sh 'double common_math_arrondi_nombre' '../src/lib/common/common_maths.c' common_math_arrondi_nombre_com.tex.tmp || exit 1;
	./input.sh 'void common_math_arrondi_triplet' '../src/lib/common/common_maths.c' common_math_arrondi_triplet_func.tex.tmp || exit 1;
	./input_com.sh 'void common_math_arrondi_triplet' '../src/lib/common/common_maths.c' common_math_arrondi_triplet_com.tex.tmp || exit 1;
	./input.sh 'void common_math_arrondi_sparse' '../src/lib/common/common_maths.c' common_math_arrondi_sparse_func.tex.tmp || exit 1;
	./input_com.sh 'void common_math_arrondi_sparse' '../src/lib/common/common_maths.c' common_math_arrondi_sparse_com.tex.tmp || exit 1;
	./input_struct.sh 'typedef enum __Type_Pays' '../src/lib/common/common_projet.h' common_projet_Type_Pays_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __CombinaisonsEL' '../src/lib/common/common_projet.h' common_projet_CombinaisonsEL_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __List_Gtk' '../src/lib/common/common_projet.h' common_projet_List_Gtk_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef enum __Type_Element' '../src/lib/common/common_projet.h' common_projet_Type_Element_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Beton_Donnees' '../src/lib/common/common_projet.h' common_projet_Beton_Donnees_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __EF' '../src/lib/common/common_projet.h' common_projet_EF_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Projet' '../src/lib/common/common_projet.h' common_projet_Projet_struct.tex.tmp || exit 1;
	./input.sh "Projet\* projet_init" '../src/lib/common/common_projet.c' common_projet_projet_init_func.tex.tmp || exit 1;
	./input_com.sh "Projet\* projet_init" '../src/lib/common/common_projet.c' common_projet_projet_init_com.tex.tmp || exit 1;
	./input.sh "void projet_free" '../src/lib/common/common_projet.c' common_projet_projet_free_func.tex.tmp || exit 1;
	./input_com.sh "void projet_free" '../src/lib/common/common_projet.c' common_projet_projet_free_com.tex.tmp || exit 1;
	./input.sh "void show_warranty" '../src/lib/common/common_text.c' common_text_show_warranty_func.tex.tmp || exit 1;
	./input_com.sh "void show_warranty" '../src/lib/common/common_text.c' common_text_show_warranty_com.tex.tmp || exit 1;
	./input.sh "void show_help" '../src/lib/common/common_text.c' common_text_show_help_func.tex.tmp || exit 1;
	./input_com.sh "void show_help" '../src/lib/common/common_text.c' common_text_show_help_com.tex.tmp || exit 1;
	./input.sh "GtkWidget\* common_tooltip_generation" '../src/lib/common/common_tooltip.c' common_tooltip_generation_func.tex.tmp || exit 1;
	./input_com.sh "GtkWidget\* common_tooltip_generation" '../src/lib/common/common_tooltip.c' common_tooltip_generation_com.tex.tmp || exit 1;
	./input_struct.sh 'typedef enum __Type_EF_Appui' '../src/lib/EF/EF_appuis.h' EF_appuis_Type_EF_Appui_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __EF_Appui' '../src/lib/EF/EF_appuis.h' EF_appuis_EF_Appui_struct.tex.tmp || exit 1;
	./input.sh "int EF_appuis_init" '../src/lib/EF/EF_appuis.c' EF_appuis_init_func.tex.tmp || exit 1;
	./input_com.sh "int EF_appuis_init" '../src/lib/EF/EF_appuis.c' EF_appuis_init_com.tex.tmp || exit 1;
	./input.sh "int EF_appuis_ajout" '../src/lib/EF/EF_appuis.c' EF_appuis_ajout_func.tex.tmp || exit 1;
	./input_com.sh "int EF_appuis_ajout" '../src/lib/EF/EF_appuis.c' EF_appuis_ajout_com.tex.tmp || exit 1;
	./input.sh "EF_Appui\* EF_appuis_cherche_numero" '../src/lib/EF/EF_appuis.c' EF_appuis_cherche_numero_func.tex.tmp || exit 1;
	./input_com.sh "EF_Appui\* EF_appuis_cherche_numero" '../src/lib/EF/EF_appuis.c' EF_appuis_cherche_numero_com.tex.tmp || exit 1;
	./input.sh "int EF_appuis_free" '../src/lib/EF/EF_appuis.c' EF_appuis_free_func.tex.tmp || exit 1;
	./input_com.sh "int EF_appuis_free" '../src/lib/EF/EF_appuis.c' EF_appuis_free_com.tex.tmp || exit 1;
	./input.sh "int EF_calculs_initialise" '../src/lib/EF/EF_calculs.c' EF_calculs_initialise_func.tex.tmp || exit 1;
	./input_com.sh "int EF_calculs_initialise" '../src/lib/EF/EF_calculs.c' EF_calculs_initialise_com.tex.tmp || exit 1;
	./input.sh "int EF_calculs_genere_mat_rig" '../src/lib/EF/EF_calculs.c' EF_calculs_genere_mat_rig_func.tex.tmp || exit 1;
	./input_com.sh "int EF_calculs_genere_mat_rig" '../src/lib/EF/EF_calculs.c' EF_calculs_genere_mat_rig_com.tex.tmp || exit 1;
	./input.sh "int EF_calculs_moment_hyper_y" '../src/lib/EF/EF_calculs.c' EF_calculs_moment_hyper_y_func.tex.tmp || exit 1;
	./input_com.sh "int EF_calculs_moment_hyper_y" '../src/lib/EF/EF_calculs.c' EF_calculs_moment_hyper_y_com.tex.tmp || exit 1;
	./input.sh "int EF_calculs_moment_hyper_z" '../src/lib/EF/EF_calculs.c' EF_calculs_moment_hyper_z_func.tex.tmp || exit 1;
	./input_com.sh "int EF_calculs_moment_hyper_z" '../src/lib/EF/EF_calculs.c' EF_calculs_moment_hyper_z_com.tex.tmp || exit 1;
	./input.sh "int EF_calculs_resoud_charge" '../src/lib/EF/EF_calculs.c' EF_calculs_resoud_charge_func.tex.tmp || exit 1;
	./input_com.sh "int EF_calculs_resoud_charge" '../src/lib/EF/EF_calculs.c' EF_calculs_resoud_charge_com.tex.tmp || exit 1;
	./input.sh "int EF_calculs_affiche_resultats" '../src/lib/EF/EF_calculs.c' EF_calculs_affiche_resultats_func.tex.tmp || exit 1;
	./input_com.sh "int EF_calculs_affiche_resultats" '../src/lib/EF/EF_calculs.c' EF_calculs_affiche_resultats_com.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __EF_Point' '../src/lib/EF/EF_noeud.h' EF_noeud_Type_EF_Point_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __EF_Noeud' '../src/lib/EF/EF_noeud.h' EF_noeud_Type_EF_Noeud_struct.tex.tmp || exit 1;
	./input.sh "int EF_noeuds_init" '../src/lib/EF/EF_noeud.c' EF_noeuds_init_func.tex.tmp || exit 1;
	./input_com.sh "int EF_noeuds_init" '../src/lib/EF/EF_noeud.c' EF_noeuds_init_com.tex.tmp || exit 1;
	./input.sh "int EF_noeuds_ajout" '../src/lib/EF/EF_noeud.c' EF_noeuds_ajout_func.tex.tmp || exit 1;
	./input_com.sh "int EF_noeuds_ajout" '../src/lib/EF/EF_noeud.c' EF_noeuds_ajout_com.tex.tmp || exit 1;
	./input.sh "EF_Noeud\* EF_noeuds_cherche_numero" '../src/lib/EF/EF_noeud.c' EF_noeuds_cherche_numero_func.tex.tmp || exit 1;
	./input_com.sh "EF_Noeud\* EF_noeuds_cherche_numero" '../src/lib/EF/EF_noeud.c' EF_noeuds_cherche_numero_com.tex.tmp || exit 1;
	./input.sh "int EF_noeuds_free" '../src/lib/EF/EF_noeud.c' EF_noeuds_free_func.tex.tmp || exit 1;
	./input_com.sh "int EF_noeuds_free" '../src/lib/EF/EF_noeud.c' EF_noeuds_free_com.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __EF_Relachement_Donnees_Elastique_Linaire' '../src/lib/EF/EF_relachement.h' EF_relachement_EF_Relachement_Donnees_Elastique_Linaire_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef enum __EF_Relachement_Type' '../src/lib/EF/EF_relachement.h' EF_relachement_EF_Relachement_Type_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __EF_Relachement' '../src/lib/EF/EF_relachement.h' EF_relachement_EF_Relachement_struct.tex.tmp || exit 1;
	./input.sh "int EF_relachement_init" '../src/lib/EF/EF_relachement.c' EF_relachement_init_func.tex.tmp || exit 1;
	./input_com.sh "int EF_relachement_init" '../src/lib/EF/EF_relachement.c' EF_relachement_init_com.tex.tmp || exit 1;
	./input.sh "int EF_relachement_ajout\(" '../src/lib/EF/EF_relachement.c' EF_relachement_ajout_func.tex.tmp || exit 1;
	./input_com.sh "int EF_relachement_ajout\(" '../src/lib/EF/EF_relachement.c' EF_relachement_ajout_com.tex.tmp || exit 1;
	./input.sh "EF_Relachement\* EF_relachement_cherche_numero" '../src/lib/EF/EF_relachement.c' EF_relachement_cherche_numero_func.tex.tmp || exit 1;
	./input_com.sh "EF_Relachement\* EF_relachement_cherche_numero" '../src/lib/EF/EF_relachement.c' EF_relachement_cherche_numero_com.tex.tmp || exit 1;
	./input.sh "int EF_relachement_free" '../src/lib/EF/EF_relachement.c' EF_relachement_free_func.tex.tmp || exit 1;
	./input_com.sh "int EF_relachement_free" '../src/lib/EF/EF_relachement.c' EF_relachement_free_com.tex.tmp || exit 1;
	./input.sh "int EF_rigidite_init" '../src/lib/EF/EF_rigidite.c' EF_rigidite_init_func.tex.tmp || exit 1;
	./input_com.sh "int EF_rigidite_init" '../src/lib/EF/EF_rigidite.c' EF_rigidite_init_com.tex.tmp || exit 1;
	./input.sh "int EF_rigidite_free" '../src/lib/EF/EF_rigidite.c' EF_rigidite_free_func.tex.tmp || exit 1;
	./input_com.sh "int EF_rigidite_free" '../src/lib/EF/EF_rigidite.c' EF_rigidite_free_com.tex.tmp || exit 1;
	./input_struct.sh 'typedef enum __Charge_Type' '../src/lib/EF/EF_charge_noeud.h' EF_charge_noeud_Charge_Type_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Charge_Noeud' '../src/lib/EF/EF_charge_noeud.h' EF_charge_noeud_Charge_Noeud_struct.tex.tmp || exit 1;
	./input.sh "int EF_charge_noeud_ajout" '../src/lib/EF/EF_charge_noeud.c' EF_charge_noeud_ajout_func.tex.tmp || exit 1;
	./input_com.sh "int EF_charge_noeud_ajout" '../src/lib/EF/EF_charge_noeud.c' EF_charge_noeud_ajout_com.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Charge_Barre_Ponctuelle' '../src/lib/EF/EF_charge_barre_ponctuelle.h' EF_charge_barre_ponctuelle_Charge_Barre_Ponctuelle_struct.tex.tmp || exit 1;
	./input.sh "int EF_charge_barre_ponctuelle_ajout" '../src/lib/EF/EF_charge_barre_ponctuelle.c' EF_charge_barre_ponctuelle_ajout_func.tex.tmp || exit 1;
	./input_com.sh "int EF_charge_barre_ponctuelle_ajout" '../src/lib/EF/EF_charge_barre_ponctuelle.c' EF_charge_barre_ponctuelle_ajout_com.tex.tmp || exit 1;
	./input_struct.sh 'typedef enum __Action_Categorie' '../src/lib/1990/1990_actions.h' 1990_actions_Action_Categorie_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Action' '../src/lib/1990/1990_actions.h' 1990_actions_Action_struct.tex.tmp || exit 1;
	./input.sh "char\* _1990_action_type_bat_txt_eu" '../src/lib/1990/1990_actions.c' _1990_action_type_bat_txt_eu_func.tex.tmp || exit 1;
	./input_com.sh "char\* _1990_action_type_bat_txt_eu" '../src/lib/1990/1990_actions.c' _1990_action_type_bat_txt_eu_com.tex.tmp || exit 1;
	./input.sh "char\* _1990_action_type_bat_txt_fr" '../src/lib/1990/1990_actions.c' _1990_action_type_bat_txt_fr_func.tex.tmp || exit 1;
	./input_com.sh "char\* _1990_action_type_bat_txt_fr" '../src/lib/1990/1990_actions.c' _1990_action_type_bat_txt_fr_com.tex.tmp || exit 1;
	./input.sh "char\* _1990_action_type_bat_txt\(" '../src/lib/1990/1990_actions.c' _1990_action_type_bat_txt_func.tex.tmp || exit 1;
	./input_com.sh "char\* _1990_action_type_bat_txt\(" '../src/lib/1990/1990_actions.c' _1990_action_type_bat_txt_com.tex.tmp || exit 1;
	./input.sh "Action_Categorie _1990_action_categorie_bat_eu" '../src/lib/1990/1990_actions.c' _1990_action_categorie_bat_eu_func.tex.tmp || exit 1;
	./input_com.sh "Action_Categorie _1990_action_categorie_bat_eu" '../src/lib/1990/1990_actions.c' _1990_action_categorie_bat_eu_com.tex.tmp || exit 1;
	./input.sh "Action_Categorie _1990_action_categorie_bat_fr" '../src/lib/1990/1990_actions.c' _1990_action_categorie_bat_fr_func.tex.tmp || exit 1;
	./input_com.sh "Action_Categorie _1990_action_categorie_bat_fr" '../src/lib/1990/1990_actions.c' _1990_action_categorie_bat_fr_com.tex.tmp || exit 1;
	./input.sh "Action_Categorie _1990_action_categorie_bat\(" '../src/lib/1990/1990_actions.c' _1990_action_categorie_bat_func.tex.tmp || exit 1;
	./input_com.sh "Action_Categorie _1990_action_categorie_bat\(" '../src/lib/1990/1990_actions.c' _1990_action_categorie_bat_com.tex.tmp || exit 1;
	./input.sh "int _1990_action_init" '../src/lib/1990/1990_actions.c' _1990_action_init_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_action_init" '../src/lib/1990/1990_actions.c' _1990_action_init_com.tex.tmp || exit 1;
	./input.sh "int _1990_action_ajout" '../src/lib/1990/1990_actions.c' _1990_action_ajout_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_action_ajout" '../src/lib/1990/1990_actions.c' _1990_action_ajout_com.tex.tmp || exit 1;
	./input.sh "int _1990_action_cherche_numero" '../src/lib/1990/1990_actions.c' _1990_action_cherche_numero_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_action_cherche_numero" '../src/lib/1990/1990_actions.c' _1990_action_cherche_numero_com.tex.tmp || exit 1;
	./input.sh "int _1990_action_affiche_tout" '../src/lib/1990/1990_actions.c' _1990_action_affiche_tout_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_action_affiche_tout" '../src/lib/1990/1990_actions.c' _1990_action_affiche_tout_com.tex.tmp || exit 1;
	./input.sh "int _1990_action_free" '../src/lib/1990/1990_actions.c' _1990_action_free_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_action_free" '../src/lib/1990/1990_actions.c' _1990_action_free_com.tex.tmp || exit 1;
	./input.sh "double _1990_coef_psi0_bat_eu" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi0_bat_eu_func.tex.tmp || exit 1;
	./input_com.sh "double _1990_coef_psi0_bat_eu" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi0_bat_eu_com.tex.tmp || exit 1;
	./input.sh "double _1990_coef_psi1_bat_eu" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi1_bat_eu_func.tex.tmp || exit 1;
	./input_com.sh "double _1990_coef_psi1_bat_eu" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi1_bat_eu_com.tex.tmp || exit 1;
	./input.sh "double _1990_coef_psi2_bat_eu" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi2_bat_eu_func.tex.tmp || exit 1;
	./input_com.sh "double _1990_coef_psi2_bat_eu" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi2_bat_eu_com.tex.tmp || exit 1;
	./input.sh "double _1990_coef_psi0_bat_fr" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi0_bat_fr_func.tex.tmp || exit 1;
	./input_com.sh "double _1990_coef_psi0_bat_fr" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi0_bat_fr_com.tex.tmp || exit 1;
	./input.sh "double _1990_coef_psi1_bat_fr" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi1_bat_fr_func.tex.tmp || exit 1;
	./input_com.sh "double _1990_coef_psi1_bat_fr" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi1_bat_fr_com.tex.tmp || exit 1;
	./input.sh "double _1990_coef_psi2_bat_fr" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi2_bat_fr_func.tex.tmp || exit 1;
	./input_com.sh "double _1990_coef_psi2_bat_fr" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi2_bat_fr_com.tex.tmp || exit 1;
	./input.sh "double _1990_coef_psi0_bat\(" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi0_bat_func.tex.tmp || exit 1;
	./input_com.sh "double _1990_coef_psi0_bat\(" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi0_bat_com.tex.tmp || exit 1;
	./input.sh "double _1990_coef_psi1_bat\(" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi1_bat_func.tex.tmp || exit 1;
	./input_com.sh "double _1990_coef_psi1_bat\(" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi1_bat_com.tex.tmp || exit 1;
	./input.sh "double _1990_coef_psi2_bat\(" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi2_bat_func.tex.tmp || exit 1;
	./input_com.sh "double _1990_coef_psi2_bat\(" '../src/lib/1990/1990_coef_psi.c' _1990_coef_psi2_bat_com.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Combinaison_Element' '../src/lib/1990/1990_combinaisons.h' 1990_combinaisons_Combinaison_Element_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Combinaison ' '../src/lib/1990/1990_combinaisons.h' 1990_combinaisons_Combinaison_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Combinaisons' '../src/lib/1990/1990_combinaisons.h' 1990_combinaisons_Combinaisons_struct.tex.tmp || exit 1;
	./input.sh "int _1990_combinaisons_genere_xor" '../src/lib/1990/1990_combinaisons.c' _1990_combinaisons_genere_xor_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_combinaisons_genere_xor" '../src/lib/1990/1990_combinaisons.c' _1990_combinaisons_genere_xor_com.tex.tmp || exit 1;
	./input.sh "int _1990_combinaisons_genere_and" '../src/lib/1990/1990_combinaisons.c' _1990_combinaisons_genere_and_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_combinaisons_genere_and" '../src/lib/1990/1990_combinaisons.c' _1990_combinaisons_genere_and_com.tex.tmp || exit 1;
	./input.sh "int _1990_combinaisons_genere_or" '../src/lib/1990/1990_combinaisons.c' _1990_combinaisons_genere_or_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_combinaisons_genere_or" '../src/lib/1990/1990_combinaisons.c' _1990_combinaisons_genere_or_com.tex.tmp || exit 1;
	./input.sh "int _1990_combinaisons_init" '../src/lib/1990/1990_combinaisons.c' _1990_combinaisons_init_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_combinaisons_init" '../src/lib/1990/1990_combinaisons.c' _1990_combinaisons_init_com.tex.tmp || exit 1;
	./input.sh "int _1990_combinaisons_genere\(" '../src/lib/1990/1990_combinaisons.c' _1990_combinaisons_genere_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_combinaisons_genere\(" '../src/lib/1990/1990_combinaisons.c' _1990_combinaisons_genere_com.tex.tmp || exit 1;
	./input.sh "int _1990_combinaisons_free" '../src/lib/1990/1990_combinaisons.c' _1990_combinaisons_free_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_combinaisons_free" '../src/lib/1990/1990_combinaisons.c' _1990_combinaisons_free_com.tex.tmp || exit 1;
	./input.sh "int _1990_duree_projet_eu" '../src/lib/1990/1990_duree.c' _1990_duree_projet_eu_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_duree_projet_eu" '../src/lib/1990/1990_duree.c' _1990_duree_projet_eu_com.tex.tmp || exit 1;
	./input.sh "int _1990_duree_projet_fr" '../src/lib/1990/1990_duree.c' _1990_duree_projet_fr_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_duree_projet_fr" '../src/lib/1990/1990_duree.c' _1990_duree_projet_fr_com.tex.tmp || exit 1;
	./input.sh "int _1990_duree_projet\(" '../src/lib/1990/1990_duree.c' _1990_duree_projet_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_duree_projet\(" '../src/lib/1990/1990_duree.c' _1990_duree_projet_com.tex.tmp || exit 1;
	./input.sh "char\* _1990_duree_projet_txt_eu" '../src/lib/1990/1990_duree.c' _1990_duree_projet_txt_eu_func.tex.tmp || exit 1;
	./input_com.sh "char\* _1990_duree_projet_txt_eu" '../src/lib/1990/1990_duree.c' _1990_duree_projet_txt_eu_com.tex.tmp || exit 1;
	./input.sh "char\* _1990_duree_projet_txt_fr" '../src/lib/1990/1990_duree.c' _1990_duree_projet_txt_fr_func.tex.tmp || exit 1;
	./input_com.sh "char\* _1990_duree_projet_txt_fr" '../src/lib/1990/1990_duree.c' _1990_duree_projet_txt_fr_com.tex.tmp || exit 1;
	./input.sh "char\* _1990_duree_projet_txt\(" '../src/lib/1990/1990_duree.c' _1990_duree_projet_txt_func.tex.tmp || exit 1;
	./input_com.sh "char\* _1990_duree_projet_txt\(" '../src/lib/1990/1990_duree.c' _1990_duree_projet_txt_com.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Element' '../src/lib/1990/1990_groupes.h' 1990_groupes_Element.tex.tmp || exit 1;
	./input_struct.sh 'typedef enum __Type_Groupe_Combinaison' '../src/lib/1990/1990_groupes.h' 1990_groupes_Type_Groupe_Combinaison.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Groupe' '../src/lib/1990/1990_groupes.h' 1990_groupes_Groupe.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Niveau_Groupe' '../src/lib/1990/1990_groupes.h' 1990_groupes_Niveau_Groupe.tex.tmp || exit 1;
	./input.sh "int _1990_groupe_init" '../src/lib/1990/1990_groupes.c' _1990_groupe_init_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_groupe_init" '../src/lib/1990/1990_groupes.c' _1990_groupe_init_com.tex.tmp || exit 1;
	./input.sh "int _1990_groupe_ajout_niveau" '../src/lib/1990/1990_groupes.c' _1990_groupe_ajout_niveau_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_groupe_ajout_niveau" '../src/lib/1990/1990_groupes.c' _1990_groupe_ajout_niveau_com.tex.tmp || exit 1;
	./input.sh "int _1990_groupe_ajout_groupe\(" '../src/lib/1990/1990_groupes.c' _1990_groupe_ajout_groupe_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_groupe_ajout_groupe\(" '../src/lib/1990/1990_groupes.c' _1990_groupe_ajout_groupe_com.tex.tmp || exit 1;
	./input.sh "int _1990_groupe_ajout_element" '../src/lib/1990/1990_groupes.c' _1990_groupe_ajout_element_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_groupe_ajout_element" '../src/lib/1990/1990_groupes.c' _1990_groupe_ajout_element_com.tex.tmp || exit 1;
	./input.sh "int _1990_groupe_positionne_niveau" '../src/lib/1990/1990_groupes.c' _1990_groupe_positionne_niveau_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_groupe_positionne_niveau" '../src/lib/1990/1990_groupes.c' _1990_groupe_positionne_niveau_com.tex.tmp || exit 1;
	./input.sh "int _1990_groupe_positionne_groupe" '../src/lib/1990/1990_groupes.c' _1990_groupe_positionne_groupe_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_groupe_positionne_groupe" '../src/lib/1990/1990_groupes.c' _1990_groupe_positionne_groupe_com.tex.tmp || exit 1;
	./input.sh "int _1990_groupe_positionne_element" '../src/lib/1990/1990_groupes.c' _1990_groupe_positionne_element_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_groupe_positionne_element" '../src/lib/1990/1990_groupes.c' _1990_groupe_positionne_element_com.tex.tmp || exit 1;
	./input.sh "void _1990_groupe_free_niveau" '../src/lib/1990/1990_groupes.c' _1990_groupe_free_niveau_func.tex.tmp || exit 1;
	./input_com.sh "void _1990_groupe_free_niveau" '../src/lib/1990/1990_groupes.c' _1990_groupe_free_niveau_com.tex.tmp || exit 1;
	./input.sh "void _1990_groupe_free_groupe" '../src/lib/1990/1990_groupes.c' _1990_groupe_free_groupe_func.tex.tmp || exit 1;
	./input_com.sh "void _1990_groupe_free_groupe" '../src/lib/1990/1990_groupes.c' _1990_groupe_free_groupe_com.tex.tmp || exit 1;
	./input.sh "void _1990_groupe_free_element\(" '../src/lib/1990/1990_groupes.c' _1990_groupe_free_element_func.tex.tmp || exit 1;
	./input_com.sh "void _1990_groupe_free_element\(" '../src/lib/1990/1990_groupes.c' _1990_groupe_free_element_com.tex.tmp || exit 1;
	./input.sh "void _1990_groupe_free\(" '../src/lib/1990/1990_groupes.c' _1990_groupe_free_func.tex.tmp || exit 1;
	./input_com.sh "void _1990_groupe_free\(" '../src/lib/1990/1990_groupes.c' _1990_groupe_free_com.tex.tmp || exit 1;
	./input.sh "int _1990_groupe_affiche_tout" '../src/lib/1990/1990_groupes.c' _1990_groupe_affiche_tout_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_groupe_affiche_tout" '../src/lib/1990/1990_groupes.c' _1990_groupe_affiche_tout_com.tex.tmp || exit 1;
	./input.sh "void _1990_gtk_groupes" '../src/lib/1990/1990_gtk_groupes.c' _1990_gtk_groupes_func.tex.tmp || exit 1;
	./input_com.sh "void _1990_gtk_groupes" '../src/lib/1990/1990_gtk_groupes.c' _1990_gtk_groupes_com.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Ponderation_Element' '../src/lib/1990/1990_ponderations.h' 1990_ponderations_Ponderation_Element.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Ponderation ' '../src/lib/1990/1990_ponderations.h' 1990_ponderations_Ponderation.tex.tmp || exit 1;
	./input.sh "int _1990_ponderations_genere_un" '../src/lib/1990/1990_ponderations.c' _1990_ponderations_genere_un_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_ponderations_genere_un" '../src/lib/1990/1990_ponderations.c' _1990_ponderations_genere_un_com.tex.tmp || exit 1;
	./input.sh "int _1990_ponderations_genere_eu" '../src/lib/1990/1990_ponderations.c' _1990_ponderations_genere_eu_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_ponderations_genere_eu" '../src/lib/1990/1990_ponderations.c' _1990_ponderations_genere_eu_com.tex.tmp || exit 1;
	./input.sh "int _1990_ponderations_genere_fr" '../src/lib/1990/1990_ponderations.c' _1990_ponderations_genere_fr_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_ponderations_genere_fr" '../src/lib/1990/1990_ponderations.c' _1990_ponderations_genere_fr_com.tex.tmp || exit 1;
	./input.sh "int _1990_ponderations_genere\(" '../src/lib/1990/1990_ponderations.c' _1990_ponderations_genere_func.tex.tmp || exit 1;
	./input_com.sh "int _1990_ponderations_genere\(" '../src/lib/1990/1990_ponderations.c' _1990_ponderations_genere_com.tex.tmp || exit 1;
	./input.sh "void _1990_ponderations_affiche_tout" '../src/lib/1990/1990_ponderations.c' _1990_ponderations_affiche_tout_func.tex.tmp || exit 1;
	./input_com.sh "void _1990_ponderations_affiche_tout" '../src/lib/1990/1990_ponderations.c' _1990_ponderations_affiche_tout_com.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Barre_Info_EF' '../src/lib/1992_1_1/1992_1_1_barres.h' 1992_1_1_barres_Barre_Info_EF.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Beton_Barre' '../src/lib/1992_1_1/1992_1_1_barres.h' 1992_1_1_barres_Beton_Barre.tex.tmp || exit 1;
	./input.sh "int _1992_1_1_barres_init" '../src/lib/1992_1_1/1992_1_1_barres.c' _1992_1_1_barres_init_func.tex.tmp || exit 1;
	./input_com.sh "int _1992_1_1_barres_init" '../src/lib/1992_1_1/1992_1_1_barres.c' _1992_1_1_barres_init_com.tex.tmp || exit 1;
	./input.sh "int _1992_1_1_barres_ajout" '../src/lib/1992_1_1/1992_1_1_barres.c' _1992_1_1_barres_ajout_func.tex.tmp || exit 1;
	./input_com.sh "int _1992_1_1_barres_ajout" '../src/lib/1992_1_1/1992_1_1_barres.c' _1992_1_1_barres_ajout_com.tex.tmp || exit 1;
	./input.sh "Beton_Barre\* _1992_1_1_barres_cherche_numero" '../src/lib/1992_1_1/1992_1_1_barres.c' _1992_1_1_barres_cherche_numero_func.tex.tmp || exit 1;
	./input_com.sh "Beton_Barre\* _1992_1_1_barres_cherche_numero" '../src/lib/1992_1_1/1992_1_1_barres.c' _1992_1_1_barres_cherche_numero_com.tex.tmp || exit 1;
	./input.sh "int _1992_1_1_barres_rigidite_ajout\(" '../src/lib/1992_1_1/1992_1_1_barres.c' _1992_1_1_barres_rigidite_ajout_func.tex.tmp || exit 1;
	./input_com.sh "int _1992_1_1_barres_rigidite_ajout\(" '../src/lib/1992_1_1/1992_1_1_barres.c' _1992_1_1_barres_rigidite_ajout_com.tex.tmp || exit 1;
	./input.sh "int _1992_1_1_barres_rigidite_ajout_tout" '../src/lib/1992_1_1/1992_1_1_barres.c' _1992_1_1_barres_rigidite_ajout_tout_func.tex.tmp || exit 1;
	./input_com.sh "int _1992_1_1_barres_rigidite_ajout_tout" '../src/lib/1992_1_1/1992_1_1_barres.c' _1992_1_1_barres_rigidite_ajout_tout_com.tex.tmp || exit 1;
	./input.sh "int _1992_1_1_barres_free" '../src/lib/1992_1_1/1992_1_1_barres.c' _1992_1_1_barres_free_func.tex.tmp || exit 1;
	./input_com.sh "int _1992_1_1_barres_free" '../src/lib/1992_1_1/1992_1_1_barres.c' _1992_1_1_barres_free_com.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Beton_Materiau' '../src/lib/1992_1_1/1992_1_1_materiaux.h' 1992_1_1_materiaux_Beton_Materiau_struct.tex.tmp || exit 1;
	./input.sh "int _1992_1_1_materiaux_init" '../src/lib/1992_1_1/1992_1_1_materiaux.c' _1992_1_1_materiaux_init_func.tex.tmp || exit 1;
	./input_com.sh "int _1992_1_1_materiaux_init" '../src/lib/1992_1_1/1992_1_1_materiaux.c' _1992_1_1_materiaux_init_com.tex.tmp || exit 1;
	./input.sh "int _1992_1_1_materiaux_ajout" '../src/lib/1992_1_1/1992_1_1_materiaux.c' _1992_1_1_materiaux_ajout_func.tex.tmp || exit 1;
	./input_com.sh "int _1992_1_1_materiaux_ajout" '../src/lib/1992_1_1/1992_1_1_materiaux.c' _1992_1_1_materiaux_ajout_com.tex.tmp || exit 1;
	./input.sh "Beton_Materiau\* _1992_1_1_materiaux_cherche_numero" '../src/lib/1992_1_1/1992_1_1_materiaux.c' _1992_1_1_materiaux_cherche_numero_func.tex.tmp || exit 1;
	./input_com.sh "Beton_Materiau\* _1992_1_1_materiaux_cherche_numero" '../src/lib/1992_1_1/1992_1_1_materiaux.c' _1992_1_1_materiaux_cherche_numero_com.tex.tmp || exit 1;
	./input.sh "int _1992_1_1_materiaux_free" '../src/lib/1992_1_1/1992_1_1_materiaux.c' _1992_1_1_materiaux_free_func.tex.tmp || exit 1;
	./input_com.sh "int _1992_1_1_materiaux_free" '../src/lib/1992_1_1/1992_1_1_materiaux.c' _1992_1_1_materiaux_free_com.tex.tmp || exit 1;
	./input_struct.sh 'typedef enum __Type_Beton_Section' '../src/lib/1992_1_1/1992_1_1_section.h' 1992_1_1_section_Type_Beton_Section_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Beton_Section_Caracteristiques' '../src/lib/1992_1_1/1992_1_1_section.h' 1992_1_1_section_Beton_Section_Caracteristiques_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Beton_Section_Rectangulaire' '../src/lib/1992_1_1/1992_1_1_section.h' 1992_1_1_section_Beton_Section_Rectangulaire_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Beton_Section_T' '../src/lib/1992_1_1/1992_1_1_section.h' 1992_1_1_section_Beton_Section_T_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Beton_Section_Carre' '../src/lib/1992_1_1/1992_1_1_section.h' 1992_1_1_section_Beton_Section_Carre_struct.tex.tmp || exit 1;
	./input_struct.sh 'typedef struct __Beton_Section_Circulaire' '../src/lib/1992_1_1/1992_1_1_section.h' 1992_1_1_section_Beton_Section_Circulaire_struct.tex.tmp || exit 1;
	./input.sh "int _1992_1_1_sections_init" '../src/lib/1992_1_1/1992_1_1_section.c' _1992_1_1_sections_init_func.tex.tmp || exit 1;
	./input_com.sh "int _1992_1_1_sections_init" '../src/lib/1992_1_1/1992_1_1_section.c' _1992_1_1_sections_init_com.tex.tmp || exit 1;
	./input.sh "int _1992_1_1_sections_ajout_rectangulaire" '../src/lib/1992_1_1/1992_1_1_section.c' _1992_1_1_sections_ajout_rectangulaire_func.tex.tmp || exit 1;
	./input_com.sh "int _1992_1_1_sections_ajout_rectangulaire" '../src/lib/1992_1_1/1992_1_1_section.c' _1992_1_1_sections_ajout_rectangulaire_com.tex.tmp || exit 1;
	./input.sh "int _1992_1_1_sections_ajout_T" '../src/lib/1992_1_1/1992_1_1_section.c' _1992_1_1_sections_ajout_T_func.tex.tmp || exit 1;
	./input_com.sh "int _1992_1_1_sections_ajout_T" '../src/lib/1992_1_1/1992_1_1_section.c' _1992_1_1_sections_ajout_T_com.tex.tmp || exit 1;
	./input.sh "int _1992_1_1_sections_ajout_carre" '../src/lib/1992_1_1/1992_1_1_section.c' _1992_1_1_sections_ajout_carre_func.tex.tmp || exit 1;
	./input_com.sh "int _1992_1_1_sections_ajout_carre" '../src/lib/1992_1_1/1992_1_1_section.c' _1992_1_1_sections_ajout_carre_com.tex.tmp || exit 1;
	./input.sh "int _1992_1_1_sections_ajout_circulaire" '../src/lib/1992_1_1/1992_1_1_section.c' _1992_1_1_sections_ajout_circulaire_func.tex.tmp || exit 1;
	./input_com.sh "int _1992_1_1_sections_ajout_circulaire" '../src/lib/1992_1_1/1992_1_1_section.c' _1992_1_1_sections_ajout_circulaire_com.tex.tmp || exit 1;
	./input.sh "void\* _1992_1_1_sections_cherche_numero" '../src/lib/1992_1_1/1992_1_1_section.c' _1992_1_1_sections_cherche_numero_func.tex.tmp || exit 1;
	./input_com.sh "void\* _1992_1_1_sections_cherche_numero" '../src/lib/1992_1_1/1992_1_1_section.c' _1992_1_1_sections_cherche_numero_com.tex.tmp || exit 1;
	./input.sh "int _1992_1_1_sections_free" '../src/lib/1992_1_1/1992_1_1_section.c' _1992_1_1_sections_free_func.tex.tmp || exit 1;
	./input_com.sh "int _1992_1_1_sections_free" '../src/lib/1992_1_1/1992_1_1_section.c' _1992_1_1_sections_free_com.tex.tmp || exit 1;
	pdflatex manuel.tex manuel.pdf
# On le fait deux fois pour résoudre le problème du sommaire.
	pdflatex manuel.tex manuel.pdf

CLEANFILES = *.log *.aux *pdf *.out *.tmp *.toc
