applicationdir		=	$(datadir)/2lgc
application_DATA	=	formules/1990_6_10.svg \
						formules/1990_6_10a.svg \
						formules/1990_6_10b.svg \
						xml/tooltips.xml

imagesdir			=	$(datadir)/2lgc/images
images_DATA			=	images/ajouter.xpm \
						images/supprimer.xpm \
						images/fleche_droite.xpm \
						images/fleche_gauche.xpm \
						images/fast_fleche_droite.xpm \
						images/fast_fleche_gauche.xpm
