applicationdir		=	$(datadir)/2lgc
application_DATA	=	formules/1990_6_10.svg \
						formules/1990_6_10a.svg \
						formules/1990_6_10b.svg \
						xml/tooltips.xml

applicationuidir	=	$(datadir)/2lgc/ui
applicationui_DATA	=	ui/1990_gtk_actions.ui

#imagesdir			=	$(datadir)/2lgc/images
#images_DATA			=	images/fleche_droite.xpm
