SUBDIRS =	desktop \
					ui \
					uml

applicationdir		=	$(datadir)/2lgc
application_DATA	=	formules/1990_6_10.svg \
						formules/1990_6_10a.svg \
						formules/1990_6_10b.svg \
						xml/tooltips.xml \
						csv/france_cantons.csv \
						csv/france_villes.csv \
						csv/france_neige.csv \
						csv/france_vent.csv \
						csv/france_seisme.csv \
						csv/profiles_acier.csv
