DEFAULT_INCLUDES	=	-I../../.. \
				-I../../cmd/common

lib_LTLIBRARIES = lib1990.la

lib1990_la_LIBADD = -llist

lib1990_la_SOURCES =	1990_duree.c \
			1990_coef_psi.c \
			1990_combinaisons.c \
			1990_actions.c \
			1990_groupes.c

lib1990_ladir = $(includedir)/2lgc

lib1990_la_HEADERS =	1990_duree.h \
			1990_coef_psi.h \
			1990_combinaisons.h \
			1990_actions.h \
			1990_groupes.h
