DEFAULT_INCLUDES	=	-I$(srcdir)/../../.. \
										-I$(srcdir)/../../lib \
										-I$(srcdir)/../../libsouvenir \
										-I$(srcdir)/../../macro

TESTS	=	

AM_LDFLAGS				= ../../libeurocode/libeurocode.la ../../libsouvenir/libsouvenir.la

EXTRA_PROGRAMS = $(TESTS)

CLEANFILES = *.gcno *.gcda
